--- a/automatization-project-admin-ui/src/index.css
+++ b/automatization-project-admin-ui/src/index.css
@@ -1,5 +1,33 @@
-body {
+html,
+body,
+.root,
+.init-container,
+.router-container,
+.app-container {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #c9c9c9;
+}
+
+.progress-overlay-wrapper {
+  width: 100% !important;
+  height: 100% !important;
+  z-index: 2000 !important;
+  margin-left: 0px important;
+}
+
+.progress-overlay-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: center;
+
+  height: 100%;
+  width: 100%;
+  font-size: 2em;
 }
