--- a/automatization-project-admin-ui/src/index.css
+++ b/automatization-project-admin-ui/src/index.css
@@ -63,3 +63,15 @@ body,
   text-align: right;
   padding: 0px 5px;
 }
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
+}
+
+.modal-dialog-footer button {
+  margin: 10px !important;
+}
